[package]
name = "todo"
version = "0.1.0"
edition = "2021"

[lib]
name = "todolib"
path = "src/lib.rs"

[[bin]]
name = "todobin"
path = "src/main.rs"

[dependencies]
axum = "0.7.5"
diesel = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.111"
serial_test = "3.1.1"
tokio = { version = "1.39.3", features = ["full"] }
